--- a/srcs/frontend/trans/style.css
+++ b/srcs/frontend/trans/style.css
@@ -84,3 +84,50 @@ canvas
     border: 5px solid #fff;
 }
 */
+
+body {
+	background-image: url('./assets/2Dtable.png');
+	background-size: cover;
+	background-position: center;
+	margin: 0;
+	font-family: Arial, sans-serif;
+}
+
+#frameContainer {
+	position: relative;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+}
+
+#uiLayer {
+	position: absolute;
+	width: 100;
+	height: 100%;
+	z-index: 5;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+#controls {
+	position: absolute;
+	top: 20px;
+	display: flex;
+	gap: 20px;
+	font-size: 20px;
+	z-index: 20;
+}
+
+#fullFrameOverlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 103%;
+	height: 100%;
+	object-fit: fill;
+	z-index: 10;
+	pointer-events: none;
+}
+
