--- a/srcs/frontend/trans/style.css
+++ b/srcs/frontend/trans/style.css
@@ -90,7 +90,7 @@ body {
 	background-size: cover;
 	background-position: center;
 	margin: 0;
-	font-family: Arial, sans-serif;
+	font-family: 'Orbitron', sans-serif;
 }
 
 #frameContainer {
