--- a/srcs/frontend/trans/style.css
+++ b/srcs/frontend/trans/style.css
@@ -91,6 +91,7 @@ body {
 	background-position: center;
 	margin: 0;
 	font-family: 'Orbitron', sans-serif;
+    overflow-x: hidden;
 }
 
 #frameContainer {
@@ -98,6 +99,12 @@ body {
 	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
+}
+
+canvas {
+	max-width: 100%;
+	max-height: 100%;
+    margin: 0 auto;
 }
 
 #uiLayer {
