--- a/srcs/frontend/trans/style.css
+++ b/srcs/frontend/trans/style.css
@@ -85,15 +85,17 @@ canvas
 }
 */
 
-body {
-	background-image: url('./assets/2Dtable.png');
+body
+{
+	background-image: url('./assets/common_bg.png');
 	background-size: cover;
 	background-position: center;
 	margin: 0;
 	font-family: 'Orbitron', sans-serif;
 }
 
-#frameContainer {
+#frameContainer
+{
 	position: relative;
 	width: 100vw;
 	height: 100vh;
@@ -102,7 +104,9 @@ body {
 
 #uiLayer {
 	position: absolute;
-	width: 100;
+	top: 100px;
+  	bottom: 80px;
+	width: 100%;
 	height: 100%;
 	z-index: 5;
 	display: flex;
@@ -111,7 +115,8 @@ body {
 	justify-content: center;
 }
 
-#controls {
+#controls
+{
 	position: absolute;
 	top: 20px;
 	display: flex;
@@ -120,7 +125,8 @@ body {
 	z-index: 20;
 }
 
-#fullFrameOverlay {
+#fullFrameOverlay
+{
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -131,3 +137,96 @@ body {
 	pointer-events: none;
 }
 
+
+.neon-panel
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.neon-panel input,
+.neon-panel button
+{
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0.3rem 0;
+}
+
+
+.neon-panel input,
+.neon-panel button
+{
+  max-width: 300px;
+}
+
+
+.neon-panel .container
+{
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.neon-panel .mb-3
+{
+  margin-bottom: 0.4rem;
+}
+
+
+
+.neon-panel .text-center
+{
+  width: 100%;
+  max-width: 300px;
+  text-align: center;
+}
+
+.neon-panel button
+{
+  padding: 0.75rem;
+}
+
+.neon-panel
+{
+    max-width: 380px;
+    margin: 0 auto;
+    padding: 20px 30px;
+    position: relative;
+
+
+    background: rgba(0, 0, 0, 0.35);
+    -webkit-backdrop-filter: blur(8px) brightness(0.9);
+    backdrop-filter: blur(5px) brightness(1.15);
+
+    border: 2px solid #ff00ff;
+    border-radius: 10px;
+
+    box-shadow:
+        0 0 6px  #ff00ff,
+        0 0 14px #ff00ff,
+        0 0 28px #ff00ff,
+        inset 0 0 12px #ff00ff;
+
+    transition: box-shadow 0.25s ease-in-out;
+}
+
+/* shining */
+.neon-panel:hover
+{
+    box-shadow:
+        0 0 10px  #ff00ff,
+        0 0 20px  #ff00ff,
+        0 0 40px  #ff00ff,
+        inset 0 0 18px #ff00ff;
+}
+.neon-panel
+{
+  margin: 20px auto 20px;  /* 20px — from header, 20px — from footer */
+}
