--- a/srcs/frontend/trans/style.css
+++ b/srcs/frontend/trans/style.css
@@ -1,17 +1,35 @@
-body
+/*body
 {
     background: linear-gradient(135deg, #1a1a1d, #0f2027);
     color: #fff;
     font-family: 'Orbitron', sans-serif;
-}
+}*/
 
 header, footer
 {
-    background-color: #111;
+
+	background: rgba(17, 17, 17, 0.5);
+
+	-webkit-backdrop-filter: blur(8px) brightness(0.9);
+	backdrop-filter: blur(8px) brightness(0.9);
+
+	border: 2px solid #ff00ff;
+    box-shadow:
+    0 0 8px #ff00ff,
+    0 0 16px #ff00ff,
+    inset 0 0 6px #ff00ff;
+
+    color: #39ff14;
+    text-align: center;
+    padding: 1rem;
+
+    flex: 0 0 auto;
+
+/*    background-color: #111;
     color: #39ff14;
     box-shadow: 0 0 15px #ff00c8;
     text-align: center;
-    padding: 1rem;
+    padding: 1rem;*/
 }
 
 footer
@@ -87,6 +105,11 @@ canvas
 
 body
 {
+    display: flex;
+  	flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+
 	background-image: url('./assets/common_bg.png');
 	background-size: cover;
 	background-position: center;
@@ -103,7 +126,19 @@ body
 }
 
 #uiLayer {
-	position: absolute;
+   position: absolute;
+   left: 0;
+   right: 0;
+   top: 5rem;      /* отступ равен реальной высоте header */
+   bottom: 4rem;   /* отступ равен реальной высоте footer */
+   display: flex;
+   flex-direction: column;
+   align-items: center;     /* центр по горизонтали */
+   justify-content: center; /* центр по вертикали */
+
+
+
+	/*position: absolute;
 	top: 100px;
   	bottom: 80px;
 	width: 100%;
@@ -112,7 +147,7 @@ body
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: center;*/
 }
 
 #controls
