--- a/srcs/frontend/trans/style.css
+++ b/srcs/frontend/trans/style.css
@@ -67,7 +67,7 @@ input
 {
     background-color: #222;
     border: 1px solid #ff00ff;
-    color: #fff;
+    color: #302727;
     padding: 0.4rem;
     margin: 0.3rem 0;
     border-radius: 4px;
@@ -86,22 +86,6 @@ hr
     margin: 2rem 0;
 }
 
-/*
-.container
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-canvas
-{
-	border-radius: 50%;
-    background-color: #222;
-    border: 5px solid #fff;
-}
-*/
 
 body
 {
@@ -136,18 +120,6 @@ body
    align-items: center;     /* центр по горизонтали */
    justify-content: center; /* центр по вертикали */
 
-
-
-	/*position: absolute;
-	top: 100px;
-  	bottom: 80px;
-	width: 100%;
-	height: 100%;
-	z-index: 5;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;*/
 }
 
 #controls
@@ -265,3 +237,7 @@ body
 {
   margin: 20px auto 20px;  /* 20px — from header, 20px — from footer */
 }
+
+.neon-panel p {
+    color: #bedad9;
+  }
