css another fonts color fix

--- a/srcs/frontend/trans/style.css
+++ b/srcs/frontend/trans/style.css
@@ -1,9 +1,9 @@
-/*body
+body
 {
     background: linear-gradient(135deg, #1a1a1d, #0f2027);
     color: #fff;
     font-family: 'Orbitron', sans-serif;
-}*/
+}
 
 header, footer
 {
