--- a/srcs/frontend/trans/style.css
+++ b/srcs/frontend/trans/style.css
@@ -137,3 +137,28 @@ canvas {
 	z-index: 10;
 	pointer-events: none;
 }
+
+#tournamentFrameContainer {
+	position: relative;
+	display: inline-block;
+	width: fit-content;
+	height: fit-content;
+	margin: 0 auto;
+}
+
+#tournamentCanvas {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
+#tournamentFrameOverlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: fill;
+	pointer-events: none;
+	z-index: 10;
+}
